--- a/jo.html
+++ b/jo.html
@@ -2,8 +2,8 @@
 
 
 
-{"number":"0","name":"AmmanNet - FM 92.4 - Amman","description":"","logo":"https://raw.githubusercontent.com/devhachimi/jo/master/jo01.png","streamUrl":"http://192.99.17.12:6015/;","yourmuzeId":"0","state":"1"},
- {"number":"1","name":"Beat FM 102.5 - FM 102.5 - Amman","description":"","logo":"https://raw.githubusercontent.com/devhachimi/jo/master/jo02.jpg","streamUrl":"http://50.7.70.66:8303/;","yourmuzeId":"0","state":"1"},
+{"number":"0","name":"AmmanNet - FM 92.4 - Amman","description":"","logo":"https://raw.githubusercontent.com/devhachimi/jo/master/jo01.png","streamUrl":"http://ammannet.net:8585/stream/5/;?type=.mp3/;stream.mp3","yourmuzeId":"0","state":"1"},
+ {"number":"1","name":"Beat FM 102.5 - FM 102.5 - Amman","description":"","logo":"https://raw.githubusercontent.com/devhachimi/jo/master/jo02.jpg","streamUrl":"http://192.184.9.81:8049/live?type=.mp3/;stream.mp3","yourmuzeId":"0","state":"1"},
  {"number":"2","name":"Global 94.5 - FM 94.5 - Amman","description":"","logo":"https://raw.githubusercontent.com/devhachimi/jo/master/jo03.jpg","streamUrl":"http://streaming2.toutech.net:8000/jawharafm","yourmuzeId":"0","state":"1"},
  {"number":"3","name":"Hala FM 102.1 - FM 102.1 - Amman","description":"","logo":"https://raw.githubusercontent.com/devhachimi/jo/master/jo04.jpg","streamUrl":"http://audio1.meway.tv:8082/;","yourmuzeId":"0","state":"1"},
 {"number":"4","name":"Hayat FM - FM 104.7 - Amman","description":"","logo":"https://raw.githubusercontent.com/devhachimi/jo/master/jo05.jpg","streamUrl":"http://radio.alwasat.jo:5880/stream","yourmuzeId":"0","state":"1"},
